tests/baselines/reference/augmentedTypesClass4.errors.txt
==== tests/cases/compiler/augmentedTypesClass4.ts (1 errors) ====
    //// class then class
    class c3 { public foo() { } }
    class c3 { public bar() { } } // error
          ~~
!!! error TS2300: Duplicate identifier 'c3'.
    